@@ -1,3 +1,7 @@
+2003-03-18  Bruno Haible  <bruno@clisp.org>
+
+	* onceonly.m4: Update from gnulib.
+
 2003-02-28  Bruno Haible  <bruno@clisp.org>
 
 	Support for relocatable installation.
